# server

./: .clang-format  CMakeLists.txt  README.md  config.cmake  log.txt  package.cmake
.devcontainer/: Dockerfile  devcontainer.json
data/: config.txt
source/: IfcBuffer.hpp  IfcStorage.hpp  SharedMemory.cpp  SharedMemory.hpp  Storage.cpp  Storage.hpp  main.cpp
source/buffer/: IfcBuffer.cpp  IfcBuffer.hpp  SimpleMemory.cpp  SimpleMemory.hpp
source/client/: client.cpp
source/exceptions/: exception.cpp  exception.hpp
source/logger/: logger.hpp
source/netxx/: netxx.hpp
source/server/: IClient.hpp  IfcClient.cpp  IfcClient.hpp  IfcConnection.hpp  IfcStorage.cpp  IfcStorage.hpp  NetClient.cpp  NetClient.hpp  Protocol.hpp  QueuedClient.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerManager.cpp  ServerManager.hpp  Storage.cpp  Storage.hpp
tools/: format.sh  x64compile.sh
